# VTextureProcessor

./: .gitignore  CMakeLists.txt  Doxyfile  LICENCE  Makefile  OurMakefile  README.md  README.txt  cache.vtxc
TextureProcessor/: CMakeLists.txt  Link.h  Makefile  Node.cpp  Node.h  Sink.cpp  Source.cpp  Source.h  TextureProcessor.cpp  TextureProcessor.h  grammar.ebnf  windeployqt.cmake
TextureProcessor/Plugins/: CMakeLists.txt
TextureProcessor/Plugins/ads/: CMakeLists.txt
TextureProcessor/include/: EntryMain.h  Graph.h  GraphCodex.h  Link.h  Node.h  PortType.h  ShaderNode.h  Sink.h  SinksT.h  Source.h  SourcesT.h  pch.h
TextureProcessor/include/Editor/: CodeEditor.h  Editor.h  Highlight.h  Language.h  Lexer.h  NodeParser.h  SyntaxHighlight.h  SyntaxStyle.h  TypeInfo.h
TextureProcessor/include/Interfaces/: IConnection.h  IEditable.h  INode.h  ISerialize.h
TextureProcessor/include/Logic/: ApplicationConfig.h  CodeTransformer.h  Constants.h  Descriptor.h  DynamicConstant.h  DynamicNode.h  DynamicTypes.h  Engine.h  Node.h  OutputNode.h  ParameterStorage.h  PortType.h  ProjectsData.h  PropertyView.h  ShaderNode.h  ShaderProbe.h  Sink.h  SinksT.h  Source.h  SourcesT.h
TextureProcessor/include/Presenter/: GLInterpret.h
TextureProcessor/include/Projects/: CreatePage.h  FrameControl.h  Frameless.h  ProjectDescriptor.h  ProjectsData.h  ProjectsWindow.h  StartWindow.h
TextureProcessor/include/UI/: App.h  AwareWidget.h  BufferWidgets.h  ColorWidget.h  Connection.h  ContextMenu.h  DynamicNode.h  FlowCodex.h  FlowScene.h  FlowView.h  Frameless.h  Frameless_e.h  GraphicsLayout.h  IEditable.h  INode.h  INodePrivate.h  Node.h  NodeBox.h  NodeHeader.h  NodeMenu.h  NodeModules.h  NodeStyle.h  NodeView.h  Port.h  PortContainer.h  PortsGeometry.h  ProjectEvent.h  ProjectsWindow.h  Properties.h  PropertyContainer.h  PropertyGenerator.h  PropertyHandler.h  REFlowCodex.h  Requests.h  SceneEvent.h  Sliders.h  TabRelay.h  TextureNode.h  UINode.h  Updater.h  (+1 more)
TextureProcessor/include/UI/Interfaces/: IConnection.h  INode.h  ISerialize.h
TextureProcessor/include/Windows/: EditorTab.h  MainWindow.h  ProjectsWindow.h  Properties.h  REProperties.h  SceneTab.h  Tab.h  TabRelay.h  TableProp.h
TextureProcessor/include/boost/static_string/: static_string.hpp
TextureProcessor/include/utils/: Exception.h  Macros.h  Promises.h  Utils.h  const_utils.h  string_literal.h  utils.h
TextureProcessor/nodes/: Add.json  CScale.json  Circle.json  Flow.json  Gaussian.json  Mul.json  Polygon.json  Rotate.json  Scale.json  Sub.json  Wave.json  cmp.json  color.json  dirw.json  fbm.json  graysc.json  mix.json  shift.json  simplex.json  thr.json  tiles.json  voro.json  vorop.json  wnoise.json
TextureProcessor/resources/: resources.qrc
TextureProcessor/src/: CompositeNode.cpp  EntryMain.cpp  Link.cpp  Node.cpp  ShaderNode.cpp  Sink.cpp  Source.cpp
TextureProcessor/src/Editor/: CodeEditor.cpp  Editor.cpp  Highlight.cpp  Lexer.cpp  NodeParser.cpp
TextureProcessor/src/Logic/: ApplicationConfig.cpp  CodeTransformer.cpp  CompositeNode.cpp  DynamicConstant.cpp  DynamicNode.cpp  Engine.cpp  Node.cpp  OutputNode.cpp  PortType.cpp  ProjectsData.cpp  ShaderNode.cpp  ShaderProbe.cpp  Sink.cpp  Source.cpp
TextureProcessor/src/Presenter/: Engine.cpp  GLInterpret.cpp
TextureProcessor/src/Projects/: CreatePage.cpp  FrameControl.cpp  Frameless.cpp  ProjectsData.cpp  ProjectsWindow.cpp  StartWindow.cpp
TextureProcessor/src/UI/: App.cpp  BufferWidgets.cpp  ColorWidget.cpp  Connection.cpp  ConnectionQuery.cpp  ContextMenu.cpp  DynamicNode.cpp  FlowCodex.cpp  FlowScene.cpp  FlowView.cpp  Frameless.cpp  Frameless_e.cpp  Node.cpp  NodeBox.cpp  NodeModules.cpp  NodeStyle.cpp  NodeView.cpp  Port.cpp  PortContainer.cpp  ProjectsWindow.cpp  Properties.cpp  PropertyContainer.cpp  PropertyGenerator.cpp  REFlowCodex.cpp  Sliders.cpp  TabRelay.cpp  TextureNode.cpp  UINode.cpp  Window.cpp
TextureProcessor/src/Windows/: EditorTab.cpp  MainWindow.cpp  ProjectsWindow.cpp  Properties.cpp  REProperties.cpp  SceneTab.cpp  Tab.cpp  TabRelay.cpp  TableProp.cpp
TextureProcessor/src/utils/: utils.cpp
examples/projects/: example_project.vtproj  example_project.vtxproj
src/: CMakeLists.txt
src/TextureProcessor/: CMakeLists.txt
src/TextureProcessor/include/: pch.h
src/TextureProcessor/include/Logic/: PortType.h  ProjectsData.h  ShaderNode.h  Sink.h  SinksT.h  Source.h
src/TextureProcessor/include/Presenter/: GLInterpret.h
src/TextureProcessor/include/UI/: App.h  Connection.h  ContextMenu.h  FlowCodex.h  FlowScene.h  FlowView.h  Frameless.h  INode.h  NodeStyle.h  ProjectEvent.h  ProjectsWindow.h  Sliders.h  TextureNode.h  Updater.h  Window.h
src/TextureProcessor/include/utils/: Exception.h  polymorphic_value.h
src/TextureProcessor/nodes/: Add.json  Circle.json  Polygon.json  Scale.json  Sub.json
src/TextureProcessor/resources/: resources.qrc
src/TextureProcessor/src/: EntryMain.cpp
src/TextureProcessor/src/Logic/: Node.cpp  ShaderNode.cpp  Sink.cpp  Source.cpp
src/TextureProcessor/src/Presenter/: GLInterpret.cpp
src/TextureProcessor/src/UI/: App.cpp  Connection.cpp  ContextMenu.cpp  FlowView.cpp  ProjectsWindow.cpp  Properties.cpp  Sliders.cpp  TextureNode.cpp  UINode.cpp  Window.cpp
src/include/: pch.h
src/include/Logic/: DynamicConstant.h
src/include/UI/: FlowCodex.h  NodeStyle.h  Properties.h  Window.h
src/src/Presenter/: GLInterpret.cpp
src/src/UI/: App.cpp  FlowScene.cpp  Frameless.cpp
